--- a/styles.sass
+++ b/styles.sass
@@ -202,7 +202,7 @@
 
 // 内容区域样式   
 .card-view-content 
-  height: 100%
+  height: calc(100% - 120px)
   overflow-y: auto
   padding: 1rem
   position: relative
